# shotgun

./: .gitignore  CMakeLists.txt
include/: cfr.hpp  kuhn.hpp  types.hpp
kuhn_poker_solver/: notes.md
simple_cfr_poker_solver/: main.py
simple_cfr_poker_solver/cfr/: trainer.py
simple_cfr_poker_solver/game/: kuhn_poker.py  node.py
simple_cfr_poker_solver/tests/: test_kuhn_poker.py  test_trainer.py
simple_cfr_poker_solver/utils/: deck.py
src/: cfr.cpp  kuhn.cpp  main.cpp
tests/: test_kuhn.cpp
